@@ -5,6 +5,7 @@
 == 0.3.0 [unreleased]
 
 * Added +bismas2xml+ executable.
+* Added +bismas-chardiff+ executable.
 * Renamed +bismas+ executable to +bismas-filter+.
 * Renamed Bismas::Categories to Bismas::Schema and extended scope.
 * Fixed Bismas.amend_encoding to use default encoding when encoding option is
